Try to work around occasional "font too large" Chrome bug
See https://code.google.com/p/chromium/issues/detail?id=320754.

--- a/app/sass/app.scss
+++ b/app/sass/app.scss
@@ -6,7 +6,7 @@ html {
 
 body {
   font-family: sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.6em;
   text-align: center;
   background-color: $background-color;
 }
